8088420: JavaFX WebView memory leak via EventListener